2008-08-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_rc_style.c (murrine_rc_style_init):
	RGBA = FALSE, new default

2008-08-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* TODO:
	Added TODO file

2008-08-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_tab):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_tab):
	New tabs, also I forgot to mention that in the previous commit 
	I fixed disabled sliderbutton state

2008-04-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_entry),
	(murrine_scale_draw_gradient), (murrine_draw_scale_trough),
	(murrine_draw_slider_handle), (murrine_draw_progressbar_trough):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_entry),
	(murrine_scale_draw_gradient), (murrine_rgba_draw_scale_trough),
	(murrine_rgba_draw_progressbar_trough):
	Progressbar trough updated.

2008-04-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c: (murrine_draw_lightborder),
	(murrine_set_gradient):
	* src/murrine_draw.c: (murrine_draw_button),
	(murrine_draw_progressbar_fill), (murrine_draw_tab),
	(murrine_draw_list_view_header), (murrine_draw_scrollbar_slider),
	(murrine_draw_tooltip):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_button),
	(murrine_rgba_draw_progressbar_fill), (murrine_rgba_draw_tab),
	(murrine_rgba_draw_scrollbar_slider), (murrine_rgba_draw_tooltip):
	* src/murrine_rc_style.c: (murrine_rc_style_init),
	(theme_parse_gradient), (murrine_rc_style_parse),
	(murrine_rc_style_merge):
	* src/murrine_rc_style.h:
	* src/murrine_style.c: (murrine_set_widget_parameters),
	(murrine_style_init_from_rc), (murrine_style_copy):
	* src/murrine_style.h:
	* src/murrine_types.h:
	First approach with the new gradient_shades array for the options.
	Name may change in the future.

2008-04-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c: (murrine_draw_lightborder):
	* src/murrine_rc_style.c: (murrine_rc_style_init),