@@ -1,5 +1,11 @@
 2008-08-24  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_tab):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_tab):
+	Fix inactive tabs
+
+2008-08-24  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
 	* src/murrine_rc_style.c (murrine_rc_style_init):
 	RGBA = FALSE, new default
 
